--- a/style.css
+++ b/style.css
@@ -127,6 +127,11 @@ nav {
   color: var(--secondary-text-color);
 }
 
+#image img {
+  object-fit: cover;
+  width: 40em;
+}
+
 .header-section button {
   background-color: var(--custom-blue-color);
   border-radius: 0.5em;
@@ -252,6 +257,21 @@ footer {
   text-align: center;
   padding: 1.5em 0;
   color: var(--secondary-text-color);
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.about img {
+  margin: 2em 0;
+}
+
+.about p {
+  margin-bottom: 2em;
 }
 
 @media (max-width: 600px) {
