--- a/style.css
+++ b/style.css
@@ -34,11 +34,16 @@ nav {
   justify-content: space-between;
   background-color: var(--primary-background-color);
   padding: 0 7em;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 85%;
 }
 
-.logo {
+.logo a {
   font-size: 24px;
   color: var(--primary-light-text-color);
+  text-decoration: none;
 }
 
 .nav-links {
@@ -67,7 +72,7 @@ nav {
 
 .nav-links li:not(:last-child) {
   margin-right: 1rem;
-  margin-bottom: 0.5em;
+  /* margin-bottom: 0.5em; */
 }
 
 .nav-links a:hover {
@@ -156,11 +161,10 @@ nav {
 }
 
 .information-options {
-  width: 70%;
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-right: 0.1em; */
 }
 
 #card {
@@ -168,7 +172,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1em 0em 1em 0.1em;
+  margin: 1em 0.5em 1em 0.1em;
 }
 
 .img-placeholder {
@@ -179,7 +183,7 @@ nav {
   color: #ffff;
 }
 
-#card p {
+#card figcaption {
   margin: 0.5em;
   padding: 0.1em 1.5em;
   text-align: justify;
@@ -196,7 +200,7 @@ nav {
   padding-bottom: 6em;
 }
 
-.quote-section p {
+.quote-section blockquote {
   font-family: 'Roboto italic', sans-serif;
   font-size: 36px;
   color: var(--primary-background-color);
@@ -207,7 +211,7 @@ nav {
 #quote-author-name {
   text-align: right;
   padding-top: 0;
-  margin-right: 9em;
+  margin-right: 15em;
   font-size: 18px;
   font-family: 'Roboto bold', sans-serif;
 }
@@ -274,24 +278,39 @@ footer {
 
 .about p {
   margin-bottom: 2em;
+  width: 50%;
+  text-align: center;
 }
 
 /* Contact page */
+
+.contact-section h4 {
+  text-align: center;
+  margin-bottom: 0em;
+}
 
 .contact-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 2em 0;
+  margin: 0 0 2em 0;
+}
+
+.contact-form label {
+  z-index: -9999;
+  visibility: hidden;
 }
 
 .contact-form input {
   margin: 1em 0;
+  width: 30em;
 }
 
 .contact-form textarea {
   margin-bottom: 1em;
+  width: 30em;
+  height: 15em;
 }
 
 .contact-form button {
@@ -301,6 +320,8 @@ footer {
   padding: 0.3em 2em;
   color: var(--secondary-text-color);
 }
+
+/* Media queries */
 
 @media (max-width: 600px) {
   nav {
@@ -361,10 +382,10 @@ footer {
 
   .quote-section {
     max-width: 600px;
-    padding-bottom: 1em;
+    padding-bottom: 0.5em;
   }
 
-  .quote-section p {
+  .quote-section blockquote {
     font-size: 18px;
     padding: 1em 1.5em;
     padding-bottom: 5px;
@@ -373,7 +394,7 @@ footer {
   #quote-author-name {
     font-size: 12px;
     margin-top: 0em;
-    margin-right: 2em;
+    margin-right: 4em;
   }
 
   .action-call-section {
@@ -402,6 +423,11 @@ footer {
 }
 
 @media (max-width: 400px) {
+  nav {
+    position: static;
+    width: 100%;
+  }
+
   .logo {
     font-size: 18px;
   }
@@ -409,7 +435,7 @@ footer {
   .toggle {
     width: 20px;
     height: 20px;
-    top: 1.5em;
+    top: 2em;
   }
 
   /* .nav-links li:last-child {
@@ -430,7 +456,7 @@ footer {
   }
 
   .header-section {
-    padding: 2em 1em 3em 1em;
+    padding: 1em 1em 3em 1em;
   }
 
   .information {
@@ -443,7 +469,7 @@ footer {
     height: 7em;
   }
 
-  #card p {
+  #card figcaption {
     font-size: 11px;
   }
 
@@ -474,5 +500,26 @@ footer {
 
   #sign-up-button button {
     margin: 1em 0 0 0.5em;
+  }
+
+  /* About page */
+
+  .about h3 {
+    margin-bottom: 0em;
+  }
+
+  .about img {
+    width: 100%;
+    margin-top: 1em;
+  }
+
+  /* Contact page */
+
+  .contact-form input {
+    width: 90%;
+  }
+
+  .contact-form textarea {
+    width: 90%;
   }
 }
